# ZGameEngine

./: .gitignore  CMakeLists.txt  README.md
ZGE2d/: CMakeLists.txt  IEventHandler.cpp  IEventHandler.hpp
ZGE2d/ZVecLib/: CMakeLists.txt
ZGE2d/ZVecLib/include/ZVecLib/: Common.hpp  Vec2dRec.hpp
ZGE2d/ZVecLib/src/: Vec2dRec.cpp
ZGE2d/ZVecLib/tests/: NewVectorGTest.cpp  NewVectorGTest.hpp  Vec2dRecGTest1.cpp  Vec2dRecTests1.cpp  Vec2dRec_test1.cpp  Vec2dRec_test2.cpp  Vec2dRec_test3.cpp  VectorOperationsGTest.cpp  VectorOperationsGTest.hpp  VectorOperatorGTest.cpp  VectorOperatorGTest.hpp  VectorStaticOperationsGTest.cpp  VectorStaticOperationsGTest.hpp  VectorTransformationGTest.cpp  VectorTransformationGTest.hpp  main.cpp
ZGE2d/docs/: Classes.md
ZGE2d/include/ZGE2d/: Animation.hpp  ControlledSprite.hpp  Definitions.hpp  Entity.hpp  GameEngine.hpp  GameWindow.hpp  IEventHandler.hpp  Label.hpp  MovingSprite.hpp  Session.hpp  Sprite.hpp  SpriteContainer.hpp  SpriteGroup.hpp  Texture.hpp  Timer.hpp  VisComp.hpp  VisEntity.hpp  Widget.hpp  WidgetContainer.hpp  library.h
ZGE2d/src/: Animation.cpp  ControlledSprite.cpp  Entity.cpp  GameEngine.cpp  GameWindow.cpp  IEventHandler.cpp  Label.cpp  MovingSprite.cpp  Session.cpp  Sprite.cpp  SpriteContainer.cpp  SpriteGroup.cpp  Texture.cpp  Timer.cpp  VisComp.cpp  VisEntity.cpp  Widget.cpp  WidgetContainer.cpp  library.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  GTest.cmake.in  License  readme.md
zgeDemoApp/: CMakeLists.txt
zgeDemoApp/src/: main.cpp
